--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -17,6 +17,9 @@ Imitator-Explorator:
   alwaysCopyBest: true
   dropInUtilityNeededForUnfriend: '-1.0'
   ignoreEdgeDirection: true
+  objectiveFunction:
+    Hourly Profit Objective:
+      opportunityCosts: true
   probability:
     Adaptive Probability:
       explorationProbability: '0.8'
