--- a/inputs/first_paper/hardswitch.yaml
+++ b/inputs/first_paper/hardswitch.yaml
@@ -21,7 +21,7 @@ Prototype:
           imitationProbability: '1.0'
           incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
-  engineWeight: normal 100.0 10.0
+  enginePower: normal 100.0 10.0
   fishers: 100
   fishingStrategy:
     Until Full With Day Limit:
