--- a/inputs/first_paper/rocky.yaml
+++ b/inputs/first_paper/rocky.yaml
@@ -20,7 +20,7 @@ Prototype:
           imitationProbability: '1.0'
           incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
-  engineWeight: normal 100.0 10.0
+  enginePower: normal 100.0 10.0
   fishers: 300
   fishingStrategy:
     Until Full With Day Limit:
