few general modifications to allow for prices to change and to supply a shock to the recruitment. Not entirely satisfied but it works

--- a/inputs/YAML Samples/components/DepartingStrategy.yaml
+++ b/inputs/YAML Samples/components/DepartingStrategy.yaml
@@ -2,6 +2,7 @@ Fixed Probability Departing:
   probabilityToLeavePort: '1.0'
 -------
 Adaptive Probability Departing:
+  checkOnlyOnceADay: false
   explorationProbability: '0.6'
   imitationProbability: '1.0'
   initialProbabilityToLeavePort: '0.5'
