Created a nice widget and the YAML code to open up "Path" through a filechooser (and read it up as string). Also, corrected the dashboard yamls since they weren't given the new name for the Abstract Scenario (the scenario formerly known as Prototype)

--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -35,3 +35,11 @@ PSO:
   inertia: uniform 0.3 0.8
   memoryWeight: uniform 0.5 1.0
 -------
+Threshold Erotetic:
+  minimumObservations: '5.0'
+  profitThreshold: '0.0'
+-------
+Better Than Average Erotetic:
+  minimumObservations: '5.0'
+  updateInterval: uniform 5.0 15.0
+-------
