--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -32,11 +32,11 @@ California Map Scenario:
   hourlyTravellingCosts: '0.0'
   literPerHourOfFishing: '11.652789144'
   literPerKilometer: '2.352150571'
-  mainDirectory: inputs/california2
+  mainDirectory: inputs/california
   networkBuilder:
     Equal Out Degree:
       degree: 2
-  priceMap: Dover Sole:0.244940171,Sablefish:0.74752115,Shortspine Thornyhead:1.218804148,Longspine Thornyhead:0.167829376,Yelloweye Rockfish:0.326586895
+  priceMap: Dover Sole:1.208,Sablefish:3.589,Shortspine Thornyhead:3.292,Longspine Thornyhead:0.7187,Yelloweye Rockfish:1.587
   recruitmentNoise: '0.0'
   regulation:
     Multi-Quotas from File:
