A lot of work to try and getting serialization to work. It does but it's very fragile and will break as we move out of simple stuff. This is because lambdas (which this code is replete with) aren't very well supported as are some arrays and some anonymous classes. This means that I have to go through all the code and take away all the pretty stuff :( Right now I am committing although the california part still doesn't work. It writes and reads back but unfortunately there seems to be some discrepancy as the randomizers diverge.

--- a/build.gradle
+++ b/build.gradle
@@ -52,6 +52,9 @@ dependencies
 
     //logger:
     compile "com.esotericsoftware:minlog:1.3.0"
+    //serializer
+    compile fileTree(dir: 'libs/xstream/lib', include: '*.jar')
+    compile "org.ogce:xpp3:1.1.6"
 
 
     //jung social network:
