Removed quotas set by file and turned them into quotas settable by map. This puts all the quota levels in the scenario yaml which makes it easy to modify for the optimizer. Also worked on a map<-->jtable conversion so that the map can be modified in the GUI.

--- a/inputs/YAML Samples/components/Regulation.yaml
+++ b/inputs/YAML Samples/components/Regulation.yaml
@@ -44,7 +44,10 @@ Kitchen Sink:
   seasonLength: '200.0'
   yearlyQuotaMaps: 0:5000
 -------
-Multi-Quotas from File:
+Multi-Quotas from Map:
+  initialQuotas: {
+    }
   itq: true
-  pathToFile: inputs/california/2015_quotas.csv
+  multipleTradesAllowed: false
+  quotaExchangedPerMatch: 100
 -------
