--- a/inputs/YAML Samples/scenario/California Map Scenario.yaml
+++ b/inputs/YAML Samples/scenario/California Map Scenario.yaml
@@ -16,7 +16,7 @@ California Map Scenario:
           opportunityCosts: true
       probability:
         Adaptive Probability:
-          explorationProbability: '0.8'
+          explorationProbability: '0.2'
           explorationProbabilityMinimum: '0.01'
           imitationProbability: '1.0'
           incrementMultiplier: '0.02'
@@ -27,10 +27,69 @@ California Map Scenario:
   fixedRecruitmentDistribution: false
   fuelTankInLiters: '45519.577'
   gasPricePerLiter: '0.811008583'
+  gear:
+    Heterogeneous Selectivity Gear:
+      gears:
+        Shortspine Thornyhead:
+          Double Normal Selectivity Gear:
+            ascWidth: '4.25'
+            averageCatchability: '0.0'
+            binMax: '75.0'
+            binMin: '0.0'
+            binWidth: '1.0'
+            dscWidth: '4.85'
+            finalScaling: .NaN
+            initialScaling: .NaN
+            peak: '28.05'
+            retentionAsymptote: '1.0'
+            retentionInflection: '23.74'
+            retentionSlope: '2.42'
+            top: '-0.3'
+        Yelloweye Rockfish:
+          Logistic Selectivity Gear:
+            averageCatchability: '0.0'
+            litersOfGasConsumedPerHour: '11.652789144'
+            retentionAsymptote: null
+            retentionInflection: null
+            retentionSlope: null
+            selectivityAParameter: '36.364'
+            selectivityBParameter: '14.009'
+        Sablefish:
+          Logistic Selectivity Gear:
+            averageCatchability: '0.0'
+            litersOfGasConsumedPerHour: '11.652789144'
+            retentionAsymptote: '0.992661'
+            retentionInflection: '21.8035'
+            retentionSlope: '1.7773'
+            selectivityAParameter: '23.5035'
+            selectivityBParameter: '9.03702'
+        Dover Sole:
+          Double Normal Selectivity Gear:
+            ascWidth: '3.967'
+            averageCatchability: '0.0'
+            binMax: '50.0'
+            binMin: '0.0'
+            binWidth: '1.0'
+            dscWidth: '-0.764'
+            finalScaling: -2.259
+            initialScaling: .NaN
+            peak: '38.953'
+            retentionAsymptote: '0.869'
+            retentionInflection: '26.962'
+            retentionSlope: '1.065'
+            top: '-1.483'
+        Longspine Thornyhead:
+          Logistic Selectivity Gear:
+            averageCatchability: '0.0'
+            litersOfGasConsumedPerHour: '11.652789144'
+            retentionAsymptote: '0.992661'
+            retentionInflection: '21.8035'
+            retentionSlope: '1.7773'
+            selectivityAParameter: '23.5035'
+            selectivityBParameter: '9.03702'
   gridWidth: 50
   holdSizePerBoat: '40000.0'
   hourlyTravellingCosts: '0.0'
-  literPerHourOfFishing: '11.652789144'
   literPerKilometer: '2.352150571'
   mainDirectory: inputs/california
   networkBuilder:
@@ -51,10 +110,5 @@ California Map Scenario:
       multipleTradesAllowed: false
       quotaExchangedPerMatch: 100
   resetBiologyAtYear: -1
-  retentionAsymptote: '0.992661'
-  retentionInflection: '21.8035'
-  retentionSlope: '1.7773'
-  selectivityAParameter: '23.5035'
-  selectivityBParameter: '9.03702'
   usePremadeInput: true
   weatherStrategy: Ignore Weather
