--- a/inputs/first_paper/gear_itq.yaml
+++ b/inputs/first_paper/gear_itq.yaml
@@ -1,7 +1,7 @@
-Prototype:
+Abstract:
   biologyInitializer:
     Well-Mixed:
-      capacityRatioSecondToFirst: '0.2'
+      capacityRatioSecondToFirst: '0.3'
       differentialPercentageToMove: '0.001'
       firstSpeciesCapacity: '5000.0'
       percentageLimitOnDailyMovement: '0.01'
@@ -16,9 +16,9 @@ Prototype:
       ignoreEdgeDirection: false
       probability:
         Adaptive Probability:
-          explorationProbability: '0.8'
+          explorationProbability: '0.2'
           explorationProbabilityMinimum: '0.01'
-          imitationProbability: '1.0'
+          imitationProbability: '0'
           incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
   enginePower: normal 100.0 10.0
