--- a/inputs/first_paper/cheap_gas.yaml
+++ b/inputs/first_paper/cheap_gas.yaml
@@ -2,4 +2,4 @@ Prototype:
   gasPricePerLiter: '0.02'
   gear:
     Random Catchability:
-      trawlSpeed: uniform 0 20
+      gasPerHourFished: uniform 0 20
