--- a/inputs/first_paper/mpa.yaml
+++ b/inputs/first_paper/mpa.yaml
@@ -1,25 +1,23 @@
-Prototype:
+Abstract:
   biologyInitializer:
     Diffusing Logistic:
       carryingCapacity: '5000.0'
       differentialPercentageToMove: '0.001'
       percentageLimitOnDailyMovement: '0.01'
-      steepness: uniform 0.6 0.8
+      steepness: 0.7
   departingStrategy:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
   destinationStrategy:
     Imitator-Explorator:
-      alwaysCopyBest: true
-      dropInUtilityNeededForUnfriend: '-1.0'
-      ignoreEdgeDirection: false
-      probability:
-        Adaptive Probability:
-          explorationProbability: '0.8'
-          explorationProbabilityMinimum: '0.01'
-          imitationProbability: '1.0'
-          incrementMultiplier: '0.02'
-      stepSize: uniform 1.0 10.0
+          alwaysCopyBest: true
+          dropInUtilityNeededForUnfriend: '-1.0'
+          ignoreEdgeDirection: false
+          probability:
+            Fixed Probability:
+              explorationProbability: '0.2'
+              imitationProbability: '1.0'
+          stepSize: uniform 1.0 10.0
   enginePower: normal 100.0 10.0
   fishers: 300
   fishingStrategy:
@@ -33,7 +31,7 @@ Prototype:
       meanCatchabilityOtherSpecies: '0.01'
       standardDeviationCatchabilityFirstSpecies: '0.0'
       standardDeviationCatchabilityOtherSpecies: '0.0'
-      trawlSpeed: '5.0'
+      gasPerHourFished: '5.0'
   habitatInitializer: All Sand
   holdSize: '100.0'
   literPerKilometer: '10.0'
@@ -44,7 +42,6 @@ Prototype:
       depthSmoothing: '1000000.0'
       height: '50.0'
       width: '50.0'
-  mapMakerDedicatedRandomSeed: null
   market:
     Fixed Price Market:
       marketPrice: '10.0'
