--- a/inputs/first_paper/oil_trawl.yaml
+++ b/inputs/first_paper/oil_trawl.yaml
@@ -1,45 +1,41 @@
-Prototype:
+Abstract:
   biologyInitializer:
-    Diffusing Logistic:
-      carryingCapacity: '5000.0'
-      differentialPercentageToMove: '0.001'
-      percentageLimitOnDailyMovement: '0.01'
-      steepness: uniform 0.6 0.8
+    From Left To Right Fixed:
+      biologySmoothingIndex: '1000000.0'
+      maximumBiomass: '5000.0'
   departingStrategy:
     Fixed Rest:
       hoursBetweenEachDeparture: '12.0'
   destinationStrategy:
     Imitator-Explorator:
-      alwaysCopyBest: true
-      dropInUtilityNeededForUnfriend: '-1.0'
-      ignoreEdgeDirection: false
-      probability:
-        Adaptive Probability:
-          explorationProbability: '0.8'
-          explorationProbabilityMinimum: '0.01'
-          imitationProbability: '1.0'
-          incrementMultiplier: '0.02'
-      stepSize: uniform 1.0 10.0
+          alwaysCopyBest: true
+          dropInUtilityNeededForUnfriend: '-1.0'
+          ignoreEdgeDirection: false
+          probability:
+            Fixed Probability:
+              explorationProbability: '0.2'
+              imitationProbability: '1.0'
+          stepSize: uniform 1.0 10.0
   enginePower: normal 100.0 10.0
   fishers: 100
   fishingStrategy:
     Until Full With Day Limit:
       daysAtSea: '5.0'
   fuelTankSize: '100000.0'
-  gasPricePerLiter: '0.01'
+  gasPricePerLiter: '0'
   gear:
     Random Catchability:
       meanCatchabilityFirstSpecies: '0.01'
       meanCatchabilityOtherSpecies: '0.01'
       standardDeviationCatchabilityFirstSpecies: '0.0'
       standardDeviationCatchabilityOtherSpecies: '0.0'
-      gasPerHourFished: '5.0'
+      gasPerHourFished: '10'
   habitatInitializer: All Sand
-  holdSize: '100.0'
-  literPerKilometer: '10.0'
+  holdSize: '500.0'
+  literPerKilometer: '0.0'
   mapInitializer:
     Simple Map:
-      cellSizeInKilometers: '10.0'
+      cellSizeInKilometers: '1.0'
       coastalRoughness: '0'
       depthSmoothing: '1000000.0'
       height: '50.0'
