All in a flux still but working on SNALSAR agents (a version of Erotetic agents). As of now I am not really sure how to translate the idea into code precisely (the separation between extractor and filter bugs me a lot) but taking a stab at it nonetheless. The big change is that I made destination strategy work through fisher rather than through status,equipment and the like. The idea wasn't very good and I think if I ever need to simulate what fishers will do in the future I'll just mock a fisher with status and the like rather than passing them separately.

--- a/inputs/first_paper/oil2.yaml
+++ b/inputs/first_paper/oil2.yaml
@@ -1,4 +1,4 @@
-Prototype:
+Abstract:
   biologyInitializer:
     From Left To Right Fixed:
       biologySmoothingIndex: '1000000.0'
@@ -8,16 +8,14 @@ Prototype:
       hoursBetweenEachDeparture: '12.0'
   destinationStrategy:
     Imitator-Explorator:
-      alwaysCopyBest: true
-      dropInUtilityNeededForUnfriend: '-1.0'
-      ignoreEdgeDirection: false
-      probability:
-        Adaptive Probability:
-          explorationProbability: '0.8'
-          explorationProbabilityMinimum: '0.01'
-          imitationProbability: '1.0'
-          incrementMultiplier: '0.02'
-      stepSize: uniform 1.0 10.0
+          alwaysCopyBest: true
+          dropInUtilityNeededForUnfriend: '-1.0'
+          ignoreEdgeDirection: false
+          probability:
+            Fixed Probability:
+              explorationProbability: '0.2'
+              imitationProbability: '1.0'
+          stepSize: uniform 1.0 10.0
   enginePower: normal 100.0 10.0
   fishers: 100
   fishingStrategy:
