Worked on policy script until I realized it had already been half-done. I think this new version is actually worse than what it is replacing but it is complete.

--- a/inputs/YAML Samples/components/Gear.yaml
+++ b/inputs/YAML Samples/components/Gear.yaml
@@ -6,23 +6,23 @@ One Species Gear:
   specieTargetIndex: 0
 -------
 Random Catchability:
+  gasPerHourFished: '5.0'
   meanCatchabilityFirstSpecies: '0.01'
   meanCatchabilityOtherSpecies: '0.01'
   standardDeviationCatchabilityFirstSpecies: '0.0'
   standardDeviationCatchabilityOtherSpecies: '0.0'
-  gasPerHourFished: '5.0'
 -------
 Random Catchability By List:
   catchabilityMap: '0:0.01'
   standardDeviationMap: ''
-  gasPerHourFished: '5.0'
+  trawlSpeed: '5.0'
 -------
 Habitat Aware Gear:
   meanCatchabilityRocky: '0.01'
   meanCatchabilitySandy: '0.01'
   standardDeviationCatchabilityRocky: '0.0'
   standardDeviationCatchabilitySandy: '0.0'
-  gasPerHourFished: '5.0'
+  trawlSpeed: '5.0'
 -------
 Threshold Gear Factory:
   catchability: '0.01'
