Large work on refactoring gear adaptation as its own strategy so that it can be added to the YAML setup and it's easy to manipulate with the optimiser. Updated much of the first_paper input files (they were still using "Prototype" rather than "Abstract" scenario). Added a CHANGELOG.md to make these updates more legible

--- a/inputs/YAML Samples/components/DestinationStrategy.yaml
+++ b/inputs/YAML Samples/components/DestinationStrategy.yaml
@@ -43,3 +43,17 @@ Better Than Average Erotetic:
   minimumObservations: '5.0'
   updateInterval: uniform 5.0 15.0
 -------
+SNALSAR:
+  acceptableThreshold:
+    Average Profits Threshold:
+      scale: '1.0'
+  failureThreshold:
+    Fixed Threshold:
+      fixedThreshold: '0.0'
+  legal: Follow the Rules
+  profit:
+    Remembered Profits:
+      includeOpportunityCosts: true
+  safety: Socially Acceptable Everywhere
+  sociallyAcceptable: Nobody Fishes Here
+-------
