--- a/inputs/dashboard/expensive_gas.yaml
+++ b/inputs/dashboard/expensive_gas.yaml
@@ -1,5 +1,15 @@
 Abstract:
-  gasPricePerLiter: '0.2'
+  gasPricePerLiter: '1'
   gear:
     Random Catchability:
       gasPerHourFished: uniform 0 20
+  gearStrategy:
+    Periodic Gear Update Mileage:
+      maximumGasPerLiter: '20.0'
+      minimumGasPerLiter: '0.0'
+      probability:
+        Fixed Probability:
+          explorationProbability: '0.2'
+          imitationProbability: '0.6'
+      shockSize: '0.05'
+      yearly: false
