--- a/inputs/first_paper/itq_mileage.yaml
+++ b/inputs/first_paper/itq_mileage.yaml
@@ -1,4 +1,4 @@
-Prototype:
+Abstract:
   biologyInitializer:
     From Left To Right Fixed:
       biologySmoothingIndex: '1000000.0'
@@ -12,11 +12,9 @@ Prototype:
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: false
       probability:
-        Adaptive Probability:
-          explorationProbability: '0.8'
-          explorationProbabilityMinimum: '0.01'
+        Fixed Probability:
+          explorationProbability: '0.2'
           imitationProbability: '1.0'
-          incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
   enginePower: normal 100.0 10.0
   fishers: 100
@@ -24,17 +22,17 @@ Prototype:
     Until Full With Day Limit:
       daysAtSea: '5.0'
   fuelTankSize: '100000.0'
-  gasPricePerLiter: '0.2'
+  gasPricePerLiter: '1'
   gear:
     Random Catchability:
       meanCatchabilityFirstSpecies: '0.1'
       meanCatchabilityOtherSpecies: '0.1'
       standardDeviationCatchabilityFirstSpecies: '0.0'
       standardDeviationCatchabilityOtherSpecies: '0.0'
-      gasPerHourFished: uniform 0 20
+      gasPerHourFished: uniform 0 50
   habitatInitializer: All Sand
   holdSize: '100.0'
-  literPerKilometer: '10.0'
+  literPerKilometer: '0.0'
   mapInitializer:
     Simple Map:
       cellSizeInKilometers: '10.0'
