Removed from use the TACOpportunityCostManager. It's a cute idea but over-engineered and I think pushes TAC users towards very strong results. It is easier to remove than to explain anyway. It's great because I think it captures the incentive to go catch the protected quota but I don't know how realistic it is.

--- a/inputs/YAML Samples/components/GearStrategy.yaml
+++ b/inputs/YAML Samples/components/GearStrategy.yaml
@@ -10,8 +10,6 @@ Periodic Gear Update from List:
   yearly: true
 -------
 Periodic Gear Update Mileage:
-  availableGears: [
-    ]
   maximumGasPerLiter: '20.0'
   minimumGasPerLiter: '0.0'
   probability:
@@ -20,4 +18,14 @@ Periodic Gear Update Mileage:
       imitationProbability: '0.6'
   shockSize: '0.05'
   yearly: false
+-------
+Periodic Gear Update Catchability:
+  maximumCatchability: '0.2'
+  minimumCatchability: '0.01'
+  probability:
+    Fixed Probability:
+      explorationProbability: '0.2'
+      imitationProbability: '1.0'
+  shockSize: '0.05'
+  yearly: true
 -------
