--- a/inputs/first_paper/gear_itq.yaml
+++ b/inputs/first_paper/gear_itq.yaml
@@ -15,13 +15,11 @@ Abstract:
       dropInUtilityNeededForUnfriend: '-1.0'
       ignoreEdgeDirection: false
       probability:
-        Adaptive Probability:
+        Fixed Probability:
           explorationProbability: '0.2'
-          explorationProbabilityMinimum: '0.01'
           imitationProbability: '0'
-          incrementMultiplier: '0.02'
       stepSize: uniform 1.0 10.0
-  enginePower: normal 100.0 10.0
+  enginePower: normal 5000.0 100.0
   fishers: 100
   fishingStrategy:
     Until Full With Day Limit:
@@ -35,6 +33,16 @@ Abstract:
       standardDeviationCatchabilityFirstSpecies: '0.0'
       standardDeviationCatchabilityOtherSpecies: '0.0'
       gasPerHourFished: '5.0'
+  gearStrategy:
+    Periodic Gear Update Catchability:
+      maximumCatchability: '0.02'
+      minimumCatchability: '.001'
+      probability:
+        Fixed Probability:
+          explorationProbability: '0.2'
+          imitationProbability: '1.0'
+      shockSize: '0.2'
+      yearly: true
   habitatInitializer: All Sand
   holdSize: '100.0'
   literPerKilometer: '10.0'
