--- a/inputs/YAML Samples/components/SafetyFeatureExtractor.yaml
+++ b/inputs/YAML Samples/components/SafetyFeatureExtractor.yaml
@@ -1,4 +1,4 @@
-Socially Acceptable Everywhere
+Ignore Rules
 -------
 Less Than X Fishers Currently Here Is Safe:
   minimumNumberOfFishersToMakeItUnacceptable: '1.0'
