Moved opportunity costs for ITQs from being part of the regulation to be a separate cost function that the planning strategy can call.

--- a/inputs/YAML Samples/components/SafetyFeatureExtractor.yaml
+++ b/inputs/YAML Samples/components/SafetyFeatureExtractor.yaml
@@ -1,4 +1,4 @@
-Ignore Rules
+Socially Acceptable Everywhere
 -------
 Less Than X Fishers Currently Here Is Safe:
   minimumNumberOfFishersToMakeItUnacceptable: '1.0'
