--- a/inputs/YAML Samples/components/GeographicalRegression.yaml
+++ b/inputs/YAML Samples/components/GeographicalRegression.yaml
@@ -12,6 +12,14 @@ Nearest Neighbor:
   spaceBandwidth: '5.0'
   timeBandwidth: '500.0'
 -------
+Complete Nearest Neighbor:
+  distanceFromPortBandwidth: '0.5'
+  habitatBandwidth: '1.0'
+  neighbors: '1.0'
+  timeBandwidth: '5000.0'
+  xBandwidth: '0.5'
+  yBandwidth: '0.5'
+-------
 Nearest Neighbor Transduction:
   spaceBandwidth: '5.0'
   timeBandwidth: '1000.0'
@@ -20,10 +28,35 @@ Kernel Transduction:
   forgettingFactor: '1.0'
   spaceBandwidth: '5.0'
 -------
-5 Parameters Kernel Transduction:
-  distanceFromPortBandwidth: '1.0'
+RBF Kernel Transduction:
+  distanceFromPortBandwidth: '25.0'
   forgettingFactor: '0.95'
   habitatBandwidth: '1.0'
-  randomBandwidth: '100000.0'
-  spaceBandwidth: '5.0'
+  xBandwidth: '25.0'
+  yBandwidth: '25.0'
+-------
+Particle Filter Regression:
+  distanceNoise: '0.1'
+  evidenceDeviation: '1.0'
+  filterSize: '100.0'
+  maxValue: '100.0'
+  minValue: '-100.0'
+  temporalDrift: '0.1'
+-------
+Simple Kalman:
+  distancePenalty: '2.0'
+  drift: '1.0'
+  evidenceUncertainty: '3.0'
+  fishingHerePenalty: '0.0'
+  initialUncertainty: '100.0'
+  maxValue: '100.0'
+  minValue: '-100.0'
+  optimism: '0.0'
+-------
+GWR:
+  exponentialForgetting: '0.98'
+  initialMax: '100.0'
+  initialMin: '-100.0'
+  initialUncertainty: '10000.0'
+  rbfBandwidth: '3.0'
 -------
