Big refactoring job to harmonize a bit the way geographical regressions take inputs, compute distances and change parameters

--- a/inputs/YAML Samples/components/GeographicalRegression.yaml
+++ b/inputs/YAML Samples/components/GeographicalRegression.yaml
@@ -60,3 +60,10 @@ GWR:
   initialUncertainty: '10000.0'
   rbfBandwidth: '3.0'
 -------
+Good-Bad:
+  badAverage: '-10.0'
+  distancePenalty: '10.0'
+  drift: '0.005'
+  goodAverage: '10.0'
+  standardDeviation: '7.5'
+-------
