Cleared up a few things about the paper and the tuning exercise.

--- a/inputs/first_paper/hyperstability.yaml
+++ b/inputs/first_paper/hyperstability.yaml
@@ -17,7 +17,7 @@ Abstract:
             Fixed Probability:
               explorationProbability: '0.2'
               imitationProbability: '1.0'
-          explorationStepSize: uniform 1.0 10.0
+          stepSize: uniform 1.0 10.0
   enginePower: normal 5000.0 100.0
   fishers: 150
   fishingStrategy:
