--- a/inputs/first_paper/race2.yaml
+++ b/inputs/first_paper/race2.yaml
@@ -18,7 +18,7 @@ Abstract:
             Fixed Probability:
               explorationProbability: '0.2'
               imitationProbability: '1.0'
-          explorationStepSize: uniform 1.0 10.0
+          stepSize: uniform 1.0 10.0
   enginePower: normal 100.0 10.0
   fishers: 100
   fishingStrategy:
